Flowmini/flowmini_v21_structural_bridge/examples/fail/bad_import_duplicate_fn.flow
import "../std/math.flow"
import "../std/other_math.flow"

module bad_import_duplicate_fn

main {
    one : int(1)
    print one
}
